--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,16 @@ section {
   font-size: 40px;
 }
 nav {
+  display: flex;
+  justify-content: space-between;
 }
 
 ul {
+  display: flex;
+  list-style-type: none;
+  width: 500px;
+  justify-content: space-around;
+  font-size: 30px;
 }
 li {
   /* width: 200px; */
@@ -22,7 +29,8 @@ li {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 90px;
+  margin: 0;
 }
 h2 {
   font-size: 50px;
@@ -30,20 +38,30 @@ h2 {
 p {
   font-weight: 300;
   font-size: 30px;
+  margin: 0;
 }
 .main-area {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .main-text {
+  margin-left: 80px;
+  margin-bottom: 200px;
 }
 
 .btn {
   width: 200px;
   height: 55px;
-  background-color: coral;
   border-radius: 30px;
+  background-color: coral;
   text-align: center;
+  font-size: 30px;
   font-weight: 300;
+  padding-top: 5px;
+  margin-top: 20px;
 
   cursor: pointer;
 }
@@ -56,19 +74,27 @@ p {
   color: #808080;
 }
 .socials {
+  padding-bottom: 200px;
 }
 .social {
+  margin: 20px;
+  margin-left: 0;
 }
 .logo {
+  height: 80px;
+  margin: 10px;
 }
 
 .sub-section {
+  display: flex;
+  justify-content: space-around;
+  padding: 80px;
 }
 .sub-section-alt {
   display: flex;
   flex-direction: column;
   text-align: center;
-  /* padding: 80px; */
+  padding: 80px;
 }
 .about-txt {
   width: 70%;
@@ -78,10 +104,11 @@ footer {
   background: #000;
   color: #fff;
   text-align: center;
+  padding: 80px;
 }
 
 .project-card {
-  width: 200px;
+  width: 300px;
   height: 500px;
   box-shadow: 5px 5px 20px rgb(190, 187, 187);
   margin: 10px;
@@ -137,4 +164,72 @@ h6 {
 #root,
 #__next {
   isolation: isolate;
+}
+
+@media only screen and (max-width: 1000px) {
+  .project-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.project-image {
+  margin-top: 25px;
+  width: 250px;
+  border-radius: 125px;
+}
+
+hr {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.project-link {
+  text-decoration: none;
+  color: #ef744b;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.hamburger {
+  display: none;
+}
+
+.hamburger:focus {
+  outline: 0;
+}
+
+@media only screen and (max-width: 1000px) {
+  .hamburger {
+    display: block;
+    border: 0;
+    background-color: transparent;
+    color: white;
+    font-size: 30px;
+    margin: 20px;
+    align-self: flex-end;
+  }
+
+  ul {
+    display: none;
+    background-color: #2b2c38;
+    margin: 0ppx;
+  }
+
+  ul.show {
+    display: block;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: #2b2c38;
+  }
+
+  .logo {
+    display: none;
+  }
 }
